<resources>
    <string name="your_web_client_id">468414907059-gp7vl8ttap3pkkmgbn1lffp8n94fvp7i.apps.googleusercontent.com</string>
    <string name="app_name">AirDrops.io</string>
    <string name="welcome_text_view">Welcome to\n\nAirDrops.io</string>
    <string name="airdrops_io_logo">Airdrops.io Logo</string>
    <string name="airdrops_io">AirDrops.io</string>
    <string name="sign_up">SIGN UP</string>
    <string name="sign_in">SIGN IN</string>
    <string name="continue_without_registration">Continue without registration</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="learn_button_description">Learn Button</string>
    <string name="profile_button_description">Profile Button</string>
    <string name="previous_airdrops_button">Old\nAirDrops</string>
    <string name="ongoing_airdrops_button">Ongoing\nAirDrops</string>
    <string name="future_airdrops_button">Future\nAirdrops</string>
    <string name="airdrop_image">AirDrop Image</string>
    <string name="airdrop_title">MDCoin</string>
    <string name="AD_short_description">Official MD Coins Airdrop</string>
    <string name="AD_dates">01/04/22 – 01/05/22</string>
    <string name="verified_ad_badge">Verified AD Badge</string>
    <string name="hot_ad_badge">Hot AD badge</string>
    <string name="sign_up_text">Sign Up</string>
    <string name="email_text">Email</string>
    <string name="password_text">Password</string>
    <string name="register_button">Register</string>
    <string name="back_arrow_button">Back arrow button</string>
    <string name="profile_picture">Profile Picture</string>
    <string name="username_text">User</string>
    <string name="edit_profile_picture">Edit profile picture</string>
    <string name="edit_profile_name">Edit profile name</string>
    <string name="starred_airdrops">Starred Airdrops</string>
    <string name="account_textview">Account</string>
    <string name="open_account_details_button">Open account details button</string>
    <string name="notifications_textview">Notifications</string>
    <string name="open_notification_details_button">Open notification details button</string>
    <string name="settings_textview">Settings</string>
    <string name="privacy_textview">Privacy</string>
    <string name="open_privacy_details_button">Open privacy details button</string>
    <string name="log_out">Logout</string>
    <string name="AD_description_details">This will be the description of the airdrop, it will contain all the general information about the drop, how to enter, how many whitelist spots, terms ect</string>
    <string name="airdrop_title_details">Airdrop Title</string>
    <string name="ethereum_logo">Ethereum logo</string>
    <string name="nft_logo">NFT logo</string>
    <string name="eth_tag">ETH</string>
    <string name="ico_tag">ICO</string>
    <string name="learn_title">Learn</string>
    <string name="ico">ICO</string>
    <string name="ico_continue_button">ICO continue button</string>
    <string name="nft">NFT</string>
    <string name="nft_continue_button">NFT continue button</string>
    <string name="sign_in_text">Sign In</string>
    <string name="login_button">Login</string>
    <string name="how_to_enter_textview">How To Enter</string>
    <string name="how_to_enter_details">In here there will be all the instructions to enter the Airdrop</string>
    <string name="first_instruction_textview">1. Join this link</string>
    <string name="second_instruction_textview">2. Follow the instructions</string>
    <string name="third_instruction_textview">3. Remember to drop the wallet address in this Reddit</string>
    <string name="requirements_textview">Requirements</string>
    <string name="requirements_details_textview">In here there will be all the requirements to enter</string>
    <string name="first_requirements_textview">1. A Metamask wallet</string>
    <string name="second_requirements_textview">2. A Web3 enabled browser</string>
    <string name="third_requirement_textview">3. Hodl at least X amount of Y</string>
    <string name="account_text_view">Account</string>
    <string name="notifications_text_view">Notifications</string>
    <string name="privacy_text_view">Privacy</string>
    <string name="list_your_airdrop">List your AirDrop</string>
    <string name="ico_title">ICO</string>
    <string name="what_is_an_ICO">An Initial Coin Offering (or ICO) is a method for teams to raise funds for a project in the cryptocurrency space. In an ICO, teams generate blockchain-based tokens to sell to early supporters. This serves as a crowdfunding phase – users receive tokens that they can use (either immediately or in the future), and the project receives money to fund development.</string>
    <string name="what_is_an_ICO_title">What is an ICO</string>
    <string name="nft_title">NFT</string>
    <string name="what_is_an_nft_title">What is an NFT</string>
    <string name="how_does_an_ICO_work_title">How does an ICO work ?</string>
    <string name="how_does_an_ICO_works_text">An ICO can take many forms. Sometimes, the team hosting it will have a functional blockchain that they’ll continue to develop in the coming months and years. In this case, users can buy tokens that are sent to their addresses on the chain. Alternatively, the blockchain might not have launched, in which case the tokens will be issued on an established one (such as Ethereum). Once the new chain is live, holders can swap their tokens for fresh ones issued on top of it.</string>
    <string name="who_can_launch_an_ICO_text">The technology to create and distribute tokens is widely accessible. But in practice, there are many legal considerations to take into account before holding an ICO. Overall, the cryptocurrency space is lacking in regulatory guidelines, and some crucial questions are yet to be answered. Some countries prohibit launching ICOs outright, but even the most crypto-friendly jurisdictions have yet to deliver clear legislation. It’s therefore imperative that you understand your own country’s laws before considering an ICO.</string>
    <string name="who_can_launch_an_ICO_title">Who can launch an ICO ?</string>
    <string name="what_are_the_risks_with_icos">What are the risks with ICOs ?</string>
    <string name="what_are_the_risks_of_an_ICO_text">The prospect of a new token granting huge returns is an appealing one. But not all coins are created equal. As with any cryptocurrency investment, there are no guarantees that you’ll have a positive return on investment (ROI). It’s difficult to determine whether a project is viable, as there are many factors to assess. Prospective investors should perform due diligence and conduct extensive research into tokens they’re considering. This process should include a thorough fundamental analysis.</string>
    <string name="email_hint">Email</string>
    <string name="password_hint">Password</string>
    <string name="what_is_an_NFT_text">A non-fungible token (NFT) is a type of cryptographic token that represents a unique asset. NFTs are tokenized versions of digital or real-world assets. They function as verifiable proofs of authenticity and ownership within a blockchain network. NFTs are not interchangeable with each other and introduce scarcity to the digital world.\nFungibility refers to the property of an asset whose individual units are interchangeable and essentially indistinguishable from each other. For example, all fiat currencies are fungible.</string>
    <string name="what_can_i_do_with_an_nft_title">What can I do with an NFT ?</string>
    <string name="what_can_i_do_with_an_NFT_text">NFTs come in all shapes, sizes, and even with different use cases. Purely collectible digital art NFTs are quite limited in terms of how they can be used. You can swap them, of course, but an NFT of a photo isn\'t much different, in terms of utility, from a printed photograph. However, some NFTs have some real uses in games, such as the famous CryptoKitties on the Ethereum blockchain. In this case, a collectible cat can breed to pass its traits to the new cats.</string>
    <string name="where_can_i_find_nfts_title">Where can I find NFTs ?</string>
    <string name="where_can_i_find_NFT_text">If you want to explore the offer of NFTs available, there are several places to start your search. NFT Markets have a large variety of non-fungible tokens for sale, from both famous artists and amateurs. There are tons of places to choose from, but some of the biggest are OpenSea for NFTs on Ethereum and Treasureland or BakerySwap on Binance Smart Chain.</string>
    <string name="how_can_i_verify_an_nft_title">How can I verify an NFT ?</string>
    <string name="how_can_i_verify_an_nft_text">The creator of an NFT should give you some kind of identifier to check. Authenticity checking work focuses on finding your NFT on a blockchain explorer such as BscScan. When it comes to blockchain, we should all use a \'don\'t trust, verify\' approach. Useful information could include the creation date and the address of the wallet that created that NFT. You can also use the transaction history ID to check if your NFT matches. This method is more accurate than simply checking the image or file associated with your collectible.</string>
    <string name="dao_continue_button">dao continue button</string>
    <string name="dao_text">DAO</string>
    <string name="dao_title">DAO</string>
    <string name="what_is_a_dao_title">What is a DAO</string>
    <string name="what_is_a_DAO_text">The acronym DAO stands for Decentralized Autonomous Organization. In simple terms, a DAO is an organization that is governed by computer code and programs. As such, it has the ability to function autonomously, without the need for a central authority. Through the use of smart contracts, a DAO can work with external information and execute commands based on them – all this without any human intervention.</string>
    <string name="how_does_a_DAO_work">A DAO is usually operated by a community of stakeholders incentivized through some kind of token mechanism. The rules and transaction records of a DAO are stored transparently on the blockchain. Rules are generally decided on by stakeholders’ votes. Typically, the way decisions are made within a DAO is through proposals. If a proposal is voted on by a majority of stakeholders (or fulfills some other rule set in the network consensus rules), it is then implemented.</string>
    <string name="how_does_it_work_title">How does it work ?</string>
    <string name="dao_examples_title">DAO examples</string>
    <string name="dao_example_text">Albeit a very primitive one, the Bitcoin network may be considered the first example of a DAO. It operates in a decentralized fashion and is coordinated by a consensus protocol with no hierarchy between participants. The Bitcoin protocol defines the rules of the organization, while bitcoins as currency provide an incentive for users to secure the network. This ensures that the different participants can work together to keep Bitcoin running as a decentralized autonomous organization. More complex DAOs may be deployed for different use cases, such as token governance, decentralized venture funds, or social media platforms. DAOs could also coordinate the operation of devices connected to the Internet of Things (IoT). On top of that, these innovations introduced a subset of DAOs called Decentralized Autonomous Corporations (DACs).</string>
    <string name="IGO_title">IGO</string>
    <string name="igo_text">IGO</string>
    <string name="igo_continue_button">IGO continue button</string>
    <string name="sol_tag">SOL</string>
    <string name="nft_tag">NFT</string>
    <string name="airdrop_title_2">AirDrops.io</string>
    <string name="airdrop_short_description_2">Official Airdrops.io Airdrop</string>
    <string name="airdrop_dates_2">20/04/22 - 20/05/22</string>
    <string name="new_learn_button">LEARN</string>
</resources>