<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/bg_bggenerator_com"
    tools:context=".MainActivity">

    <Button
        android:id="@+id/newmainbutton"
        style="?attr/borderlessButtonStyle"
        android:layout_width="64dp"
        android:layout_height="41dp"
        android:layout_marginStart="12dp"
        android:layout_marginTop="4dp"
        android:textColor="@color/white"
        app:layout_constraintStart_toEndOf="@+id/learnButton"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/homeADText"
        android:layout_width="145dp"
        android:layout_height="56dp"
        android:paddingTop="12dp"
        android:text="@string/airdrops_io"
        android:textAlignment="center"
        android:textColor="@color/white"
        android:textSize="28sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/learnButton"
        style="?attr/borderlessButtonStyle"
        android:layout_width="48dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/learn_button_description"
        android:src="@drawable/icons8_graduation_cap_30"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ImageButton
        android:id="@+id/profileButton"
        style="?attr/borderlessButtonStyle"
        android:layout_width="58dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="6dp"
        android:contentDescription="@string/profile_button_description"
        android:src="@drawable/ic_outline_account_circle_34"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <LinearLayout
        android:id="@+id/linearLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginHorizontal="5dp"
        android:layout_marginTop="24dp"
        android:orientation="horizontal"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/homeADText">

        <Button
            android:id="@+id/oldAD"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_outline_button"
            android:text="@string/previous_airdrops_button"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="35dp"
            tools:layout_editor_absoluteY="81dp" />

        <Button
            android:id="@+id/ongoingAD"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"
            android:layout_weight="1"
            android:background="@drawable/rounded_button"
            android:text="@string/ongoing_airdrops_button"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="160dp"
            tools:layout_editor_absoluteY="84dp" />

        <Button
            android:id="@+id/futureAD"
            style="?android:attr/buttonBarButtonStyle"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginHorizontal="5dp"

            android:layout_weight="1"
            android:background="@drawable/rounded_outline_button"
            android:text="@string/future_airdrops_button"
            android:textColor="@color/white"
            tools:layout_editor_absoluteX="289dp"
            tools:layout_editor_absoluteY="81dp" />
    </LinearLayout>

    <ScrollView
        android:id="@+id/home_scrollview"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginTop="30dp"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/linearLayout">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/home_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/airdropLayout"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:background="@drawable/rounded_outline_textview"
                android:clickable="true"
                android:paddingBottom="10dp"
                app:layout_constraintTop_toTopOf="parent"
                tools:layout_editor_absoluteX="16dp">


                <TextView
                    android:id="@+id/AD_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airdrop_title"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />
                <TextView
                    android:id="@+id/AD_short_description"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/AD_short_description"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/AD_title" />

                <TextView
                    android:id="@+id/AD_dates"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/AD_dates"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/AD_short_description" />

                <ImageView
                    android:id="@+id/verified_badge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/verified_ad_badge"
                    android:src="@drawable/ic_baseline_verified_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/AD_dates" />

                <ImageView
                    android:id="@+id/hot_badge"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/hot_ad_badge"
                    android:src="@drawable/ic_baseline_whatshot_24"
                    app:layout_constraintStart_toEndOf="@+id/verified_badge"
                    app:layout_constraintTop_toBottomOf="@+id/AD_dates" />

                <TextView
                    android:id="@+id/AD_tag_blockchain"
                    style="?attr/borderRound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/rounded_outline_textview"
                    android:paddingHorizontal="5dp"
                    android:text="@string/eth_tag"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/AD_tag_type"
                    app:layout_constraintTop_toBottomOf="@+id/AD_dates" />

                <TextView
                    android:id="@+id/AD_tag_type"
                    style="?attr/borderRound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="7dp"
                    android:background="@drawable/rounded_outline_textview"
                    android:paddingHorizontal="5dp"
                    android:text="@string/ico_tag"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/AD_dates" />

            </androidx.constraintlayout.widget.ConstraintLayout>

            <androidx.constraintlayout.widget.ConstraintLayout
                android:id="@+id/airdropLayout2"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginHorizontal="10dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_outline_textview"
                android:clickable="true"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/airdropLayout">

                <ImageView
                    android:id="@+id/AD_image2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:adjustViewBounds="true"
                    android:contentDescription="@string/airdrop_image"
                    android:maxHeight="400dp"
                    android:padding="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/test_banner_2"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <TextView
                    android:id="@+id/AD_title2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/airdrop_title_2"
                    android:textColor="@color/white"
                    android:textSize="24sp"
                    android:textStyle="bold"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/AD_image2" />

                <TextView
                    android:id="@+id/AD_short_description2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="16dp"
                    android:text="@string/airdrop_short_description_2"
                    android:textColor="@color/white"
                    android:textSize="18sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/AD_title2" />

                <TextView
                    android:id="@+id/AD_dates2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/airdrop_dates_2"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/AD_short_description2" />

                <ImageView
                    android:id="@+id/verified_badge2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="15dp"
                    android:layout_marginTop="20dp"
                    android:contentDescription="@string/verified_ad_badge"
                    android:src="@drawable/ic_baseline_verified_24"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/AD_dates2" />

                <TextView
                    android:id="@+id/AD_tag_blockchain2"
                    style="?attr/borderRound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="5dp"
                    android:background="@drawable/rounded_outline_textview"
                    android:paddingHorizontal="5dp"
                    android:text="@string/sol_tag"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toStartOf="@+id/AD_tag_type2"
                    app:layout_constraintTop_toBottomOf="@+id/AD_dates2" />

                <TextView
                    android:id="@+id/AD_tag_type2"
                    style="?attr/borderRound"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="25dp"
                    android:layout_marginEnd="7dp"
                    android:background="@drawable/rounded_outline_textview"
                    android:paddingHorizontal="5dp"
                    android:text="@string/nft_tag"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toBottomOf="@+id/AD_dates2" />

            </androidx.constraintlayout.widget.ConstraintLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>


</androidx.constraintlayout.widget.ConstraintLayout>