<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".learn.DAOActvitity"
    android:background="@drawable/bg_bggenerator_com"
    android:id="@+id/root_layout">

    <ImageButton
        android:id="@+id/back_button"
        style="?attr/borderlessButtonStyle"
        android:hapticFeedbackEnabled="true"
        android:layout_width="58dp"
        android:layout_marginTop="6dp"
        android:layout_height="wrap_content"
        android:contentDescription="@string/back_arrow_button"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:srcCompat="@drawable/ic_baseline_arrow_back_34" />

    <TextView
        android:id="@+id/DAO_title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/dao_title"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:layout_marginTop="16dp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <ScrollView
        android:id="@+id/DAO_scoll_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:layout_marginTop="68dp"
        android:layout_marginBottom="20dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/DAO_title" >

        <androidx.constraintlayout.widget.ConstraintLayout
            android:id="@+id/parent_constraint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <LinearLayout
                android:id="@+id/whats_a_DAO"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="20dp"
                android:background="@drawable/rounded_outline_textview"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent">

                <TextView
                    android:id="@+id/whats_a_DAO_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingVertical="10dp"
                    android:text="@string/what_is_a_dao_title"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/whats_an_ICO_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="4dp"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/what_is_a_DAO_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/how_a_DAO_work"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_outline_textview"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/whats_a_DAO">

                <TextView
                    android:id="@+id/how_a_DAO_work_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingVertical="10dp"
                    android:text="@string/how_does_it_work_title"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/how_a_DAO_work_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="4dp"
                    android:paddingHorizontal="20dp"
                    android:paddingVertical="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/how_does_a_DAO_work"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

            <LinearLayout
                android:id="@+id/DAO_examples"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginHorizontal="20dp"
                android:layout_marginTop="30dp"
                android:background="@drawable/rounded_outline_textview"
                android:orientation="vertical"
                android:paddingTop="10dp"
                android:paddingBottom="10dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/how_a_DAO_work">

                <TextView
                    android:id="@+id/DAO_examples_title"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:layout_weight="1"
                    android:paddingVertical="10dp"
                    android:text="@string/dao_examples_title"
                    android:textColor="@color/white"
                    android:textSize="22sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/DAO_examples_text"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="4"
                    android:justificationMode="inter_word"
                    android:lineSpacingExtra="4dp"
                    android:paddingHorizontal="15dp"
                    android:paddingVertical="20dp"
                    android:paddingBottom="10dp"
                    android:text="@string/dao_example_text"
                    android:textAlignment="center"
                    android:textColor="@color/white"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>

    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>